Enable gerrit, gitreview and gate testing
Initial setup for git review.

Add basic docs handling so that docs tests will pass. No
actual docs in place yet.

Align with global requirements.

Change-Id: I8ae7c2c6ce410c04f4ce53ce5278b2b85c141c93

--- a/tox.ini
+++ b/tox.ini
@@ -36,5 +36,5 @@ whitelist_externals =
 
 [flake8]
 ignore = H405,E126
-exclude=.venv,.git,.tox,dist,*egg,*.egg-info,build,examples,docs
+exclude=.venv,.git,.tox,dist,*egg,*.egg-info,build,examples,doc
 show-source = True
