--- a/setup.cfg
+++ b/setup.cfg
@@ -23,5 +23,5 @@ packages =
 
 [build_sphinx]
 all_files = 1
-build-dir = docs/build
-source-dir = docs/source
+build-dir = doc/build
+source-dir = doc/source
