Fix summary information used in pypi display
Typo in summary information fixed.

Change-Id: I1cfbd2c020cac406944b5b380c9ce13d038ab343

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = microversion_parse
-summary = OpenStack microversion heaader parser
+summary = OpenStack microversion header parser
 description-file = README.rst
 author = OpenStack
 author-email = openstack-dev@lists.openstack.org
