--- a/tox.ini
+++ b/tox.ini
@@ -3,15 +3,14 @@ minversion = 2.0
 skipsdist = True
 # If you want pypy or pypy3, do 'tox -epypy,pypy3', it might work!
 # And you can get coverage with 'tox -ecover'.
-envlist = py27,py34,py35,pep8
+envlist = py27,py36,py35,pep8
 
 [testenv]
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 install_command = pip install -U {opts} {packages}
-setenv = OS_TEST_PATH=microversion_parse/tests/
 usedevelop = True
-commands = python setup.py testr --testr-args="{posargs}"
+commands = stestr run {posargs}
 
 [testenv:venv]
 deps = -r{toxinidir}/requirements.txt
@@ -25,7 +24,15 @@ commands =
     flake8
 
 [testenv:cover]
-commands = python setup.py testr --coverage --testr-args="{posargs}"
+setenv = PYTHON=coverage run --source microversion_parse --parallel-mode
+commands =
+    coverage erase
+    find . -type f -name "*.pyc" -delete
+    stestr run {posargs}
+    coverage combine
+    coverage html -d cover
+whitelist_externals =
+    find
 
 [testenv:docs]
 commands =
