fix tox python3 overrides
We want to default to running all tox environments under python 3, so
set the basepython value in each environment.

We do not want to specify a minor version number, because we do not
want to have to update the file every time we upgrade python.

We do not want to set the override once in testenv, because that
breaks the more specific versions used in default environments like
py35 and py36.

Change-Id: Ia908e642ad1a3f67710d48a71d097c13b7743a5a

--- a/tox.ini
+++ b/tox.ini
@@ -13,17 +13,20 @@ usedevelop = True
 commands = stestr run {posargs}
 
 [testenv:venv]
+basepython = python3
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands = {posargs}
 
 [testenv:pep8]
+basepython = python3
 deps = hacking
 usedevelop = False
 commands =
     flake8
 
 [testenv:cover]
+basepython = python3
 setenv = PYTHON=coverage run --source microversion_parse --parallel-mode
 commands =
     coverage erase
@@ -35,6 +38,7 @@ whitelist_externals =
     find
 
 [testenv:docs]
+basepython = python3
 commands =
     rm -rf doc/build
     python setup.py build_sphinx
