Change openstack-dev to openstack-discuss
Mailinglists have been updated. Openstack-discuss replaces openstack-dev.

Change-Id: I95f08e4cf53daafb1c7cd087597d43a54b92e2f1

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = microversion_parse
 summary = OpenStack microversion header parser
 description-file = README.rst
 author = OpenStack
-author-email = openstack-dev@lists.openstack.org
+author-email = openstack-discuss@lists.openstack.org
 home-page = http://www.openstack.org/
 classifier =
     Environment :: OpenStack
