[ussuri][goal] Drop python 2.7 support and testing
OpenStack is dropping the py2.7 support in ussuri cycle.

Complete discussion & schedule can be found in
- http://lists.openstack.org/pipermail/openstack-discuss/2019-October/010142.html
- https://etherpad.openstack.org/p/drop-python2-support

Ussuri Communtiy-wide goal:
https://governance.openstack.org/tc/goals/selected/ussuri/drop-py27.html

Switch to modern sphinx-build and using openstackdocstheme
(note that repo is not building and publishing docs, docs building works
locally with these changes).

Change-Id: I9542c1dba3f339c2acece83d7d2b5726c1c3e2bc

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,10 @@
 [tox]
-minversion = 2.0
+minversion = 3.1.1
 skipsdist = True
 # If you want pypy or pypy3, do 'tox -epypy,pypy3', it might work!
 # And you can get coverage with 'tox -ecover'.
-envlist = py27,py36,py35,pep8
+envlist = py36,py35,pep8
+ignore_basepython_conflict = True
 
 [testenv]
 deps = -r{toxinidir}/requirements.txt
@@ -13,20 +14,16 @@ usedevelop = True
 commands = stestr run {posargs}
 
 [testenv:venv]
-basepython = python3
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands = {posargs}
 
 [testenv:pep8]
-basepython = python3
-deps = hacking
 usedevelop = False
 commands =
     flake8
 
 [testenv:cover]
-basepython = python3
 setenv = PYTHON=coverage run --source microversion_parse --parallel-mode
 commands =
     coverage erase
@@ -38,10 +35,10 @@ whitelist_externals =
     find
 
 [testenv:docs]
-basepython = python3
+deps = -r{toxinidir}/doc/requirements.txt
 commands =
     rm -rf doc/build
-    python setup.py build_sphinx
+    sphinx-build -W --keep-going -b html -d doc/build/doctrees doc/source doc/build/html
 whitelist_externals =
     rm
 
