--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -1,6 +1,4 @@
 - project:
     templates:
-      - openstack-python-jobs
-      - openstack-python35-jobs
-      - openstack-python36-jobs
+      - openstack-python3-ussuri-jobs
       - check-requirements
