--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ minversion = 3.1.1
 skipsdist = True
 # If you want pypy or pypy3, do 'tox -epypy,pypy3', it might work!
 # And you can get coverage with 'tox -ecover'.
-envlist = py36,py38,pep8
+envlist = py3,pep8
 ignore_basepython_conflict = True
 
 [testenv]
