--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ description-file = README.rst
 author = OpenStack
 author-email = openstack-discuss@lists.openstack.org
 home-page = http://www.openstack.org/
-python-requires = >=3.9
+python-requires = >=3.8
 classifier =
     Environment :: OpenStack
     Intended Audience :: Information Technology
@@ -13,6 +13,7 @@ classifier =
     Operating System :: POSIX :: Linux
     Programming Language :: Python
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3 :: Only
