pre-commit: Bump dependencies
We also migrate to the native hacking plugin and update tox.ini to match
current best practices.

Change-Id: I560c7b43548f112a1bb57ea929da84585aabdf8c
Signed-off-by: Stephen Finucane <stephenfin@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,41 +1,46 @@
 [tox]
-minversion = 3.1.1
-skipsdist = True
-# If you want pypy or pypy3, do 'tox -epypy,pypy3', it might work!
-# And you can get coverage with 'tox -ecover'.
+minversion = 4.3.0
 envlist = py3,pep8
-ignore_basepython_conflict = True
 
 [testenv]
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
-install_command = pip install -U {opts} {packages}
-usedevelop = True
-commands = stestr run {posargs}
+description =
+    Run unit tests.
+deps =
+    -c{env:TOX_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
+    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/test-requirements.txt
+commands =
+    stestr run {posargs}
 
 [testenv:venv]
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
 commands = {posargs}
 
 [testenv:pep8]
-usedevelop = False
+description =
+    Run style checks.
+skip_install = true
+deps =
+    pre-commit
 commands =
-    pre-commit run -a
+    pre-commit run --all-files --show-diff-on-failure
 
 [testenv:cover]
-setenv = PYTHON=coverage run --source microversion_parse --parallel-mode
+description =
+    Run unit tests and generate coverage report.
+setenv =
+    PYTHON=coverage run --source microversion_parse --parallel-mode
 commands =
     coverage erase
-    find . -type f -name "*.pyc" -delete
     stestr run {posargs}
     coverage combine
     coverage html -d cover
-whitelist_externals =
-    find
 
 [testenv:docs]
-deps = -r{toxinidir}/doc/requirements.txt
+description =
+    Build documentation in HTML format.
+deps =
+    -c{env:TOX_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
+    -r{toxinidir}/doc/requirements.txt
 commands =
     rm -rf doc/build
     sphinx-build -W --keep-going -b html -d doc/build/doctrees doc/source doc/build/html
@@ -44,5 +49,5 @@ whitelist_externals =
 
 [flake8]
 ignore = H405,E126
-exclude=.venv,.git,.tox,dist,*egg,*.egg-info,build,examples,doc
-show-source = True
+exclude = .venv,.git,.tox,dist,*egg,*.egg-info,build,examples,doc
+show-source = true
