--- a/tox.ini
+++ b/tox.ini
@@ -48,6 +48,8 @@ whitelist_externals =
     rm
 
 [flake8]
-ignore = H405,E126
+# We only enable the hacking (H) checks
+select = H
+ignore = H405
 exclude = .venv,.git,.tox,dist,*egg,*.egg-info,build,examples,doc
 show-source = true
