--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,3 +33,20 @@ Repository = "https://opendev.org/openstack/microversion-parse"
 packages = [
     "microversion_parse"
 ]
+
+[tool.ruff]
+line-length = 79
+
+[tool.ruff.format]
+quote-style = "single"
+docstring-code-format = true
+
+[tool.ruff.lint]
+select = ["E4", "E7", "E9", "F", "S", "U"]
+ignore = [
+    # we only use asserts for type narrowing
+    "S101",
+]
+
+[tool.ruff.lint.per-file-ignores]
+"microversion_parse/tests/*" = ["S"]
