--- a/tox.ini
+++ b/tox.ini
@@ -53,3 +53,8 @@ select = H
 ignore = H405
 exclude = .venv,.git,.tox,dist,*egg,*.egg-info,build,examples,doc
 show-source = true
+
+[hacking]
+import_exceptions =
+    collections.abc
+    typing
