--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,25 @@ packages = [
     "microversion_parse"
 ]
 
+[tool.mypy]
+python_version = "3.10"
+show_column_numbers = true
+show_error_context = true
+strict = true
+# keep this in-sync with 'mypy.exclude' in '.pre-commit-config.yaml'
+exclude = '''
+(?x)(
+    doc
+    | releasenotes
+  )
+'''
+
+[[tool.mypy.overrides]]
+module = ["microversion_parse.tests.*"]
+disallow_untyped_calls = false
+disallow_untyped_defs = false
+disallow_subclassing_any = false
+
 [tool.ruff]
 line-length = 79
 
